--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
        <div class="welcome-banner">  
           <h2>Welcome 👋</h2>  
        </div>  
-        <img src="Combany/1770444189726.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'">  
+        <img src="1770444189726.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'">  
         <h2>مرحباً بكم في الموقع الرسمي</h2>  
         <p>هنا تجدون آخر الأخبار والإعلانات والدروس الخاصة بتلاميذ ثانوية الشهيد رمضاني محمد ببلدية قرومة.</p> 
          <div>
@@ -188,7 +188,7 @@
 <div id="about" class="section">  
     <div class="card">  
     <h1> 🎓معلومات عن الثانوية</h1>
-       <img src="Combany/1770444189726.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
+       <img src="1770444189726.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
         <h2>📜 نبذة عن ثانويتنا</h2>  
         <p>سميت الثانوية باسم الشهيد البطل <strong>رمضاني محمد</strong>، تخليداً لذكراه.</p>  
         <h3>📍 الموقع والبيئة</h3>  
@@ -202,11 +202,11 @@
             <li>قاعة رياضية</li>  
             <li>مدرج كبير</li>  
         </ul> 
-        <img src="Cv/1770444305396.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
-        <img src="Cv/1770444321856.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
-        <img src="Cv/1770444318170.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية
+        <img src="1770444305396.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
+        <img src="1770444321856.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية'"> 
+        <img src="1770444318170.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية
         ">
-        <img src="Cv/1770444348466.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية
+        <img src="1770444348466.jpg" alt="ثانوية رمضاني محمد" class="school-main-img" onerror="this.src='https://via.placeholder.com/800x400?text=صورة+الثانوية
 ">
         <h3>🎓 الأداء التربوي والنشاطات</h3>  
         <p>تسعى الثانوية لتحقيق نتائج متميزة في شهادة البكالوريا، كما تنظم نشاطات دورية تشمل إحياء المناسبات الوطنية والدينية وتكريم المتفوقين.</p>  
@@ -267,7 +267,7 @@
 <div id="dev" class="section">  
     <div class="card dev-card">  
         <div class="dev-img-container">  
-            <img src="cv/1770455808503.png" alt="فؤاد قبلاجي" class="dev-img">  
+            <img src="1770455808503.png" alt="فؤاد قبلاجي" class="dev-img">  
         </div>  
         <div class="dev-name">𝐹𝑜𝑢𝑎𝑑 𝑘𝑒𝑏𝑙𝑎𝑑𝑗𝑖 | فےـؤاد قبلاجي</div>  
         <p class="dev-bio">‏
