--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         color: var(--dark);  
     }  
 
-    header {  
+    header { 
         background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1541339907198-e08756defeec?auto=format&fit=crop&w=1000&q=80');  
         background-size: cover;  
         background-position: center;  
@@ -278,7 +278,7 @@
            </div>
         <div class="social-apps">  
         
-            <a href="https://www.instagram.com/_kebladji_?igsh=MWRwcnM0bXdtd2J0MA==" target="_blank" class="app-icon">  
+            <a href="href="https://www.instagram.com/_kebladji_/" target= " target="_blank" class="app-icon">  
                 <i class="fab fa-instagram"></i>  
                 <span class="app-label">Instagram</span>  
             </a>  
