--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
            </div>
         <div class="social-apps">  
         
-            <a href="href="https://www.instagram.com/_kebladji_/" target= " target="_blank" class="app-icon">  
+            <a href="https://www.instagram.com/_kebladji_/" target="_blank" class="app-icon">
+
                 <i class="fab fa-instagram"></i>  
                 <span class="app-label">Instagram</span>  
             </a>  
