--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
            </div>
         <div class="social-apps">  
         
-            <a href="https://www.google.com/url?q=https://www.instagram.com/_kebladji_/" target="_blank" class="app-icon"> 
+            <a href="https://www.instagram.com/_kebladji_?igsh=MWRwcnM0bXdtd2J0MA==" target="_blank" class="app-icon"> 
                 <i class="fab fa-instagram"></i>  
                 <span class="app-label">Instagram</span>  
             </a>  
