--- a/index.html
+++ b/index.html
@@ -278,12 +278,13 @@
            </div>
         <div class="social-apps">  
         
-            <a href="https://www.instagram.com/_kebladji_?igsh=MWRwcnM0bXdtd2J0MA==" target="_blank" class="app-icon"> 
+             <a href="https://www.instagram.com/_kebladji_/" target="_blank" class="app-icon">
+    <i class="fab fa-instagram"></i>
+    <span class="app-label">Instagram</span>
+             </a>
                 <i class="fab fa-instagram"></i>  
                 <span class="app-label">Instagram</span>  
-            </a>  
-            <a href="mailto:Kebladjifouad@gmail.com" class="app-icon">  
-                <i class="fas fa-envelope"></i>  
+        </a<  
                 <span class="app-label">Email</span>  
             </a>  
         </div>  
