--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="description" content="الموقع الرسمي لثانوية الشهيد رمضاني محمد بقرومة - ولاية البويرة. أخبار، دروس، وإعلانات مدرسية.">
+<meta name="keywords" content="ثانوية رمضاني محمد, قرومة, البويرة, تعليم, الجزائر, فؤاد قبلاجي">
+
     <title>ثانوية الشهيد رمضاني محمد - قرومة</title>  
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;500;700;800&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">  <script src="https://www.google.com/recaptcha/api.js" async defer></script>  
