--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <meta name="description" content="الموقع الرسمي لثانوية الشهيد رمضاني محمد بقرومة - ولاية البويرة. أخبار، دروس، وإعلانات مدرسية.">
-<meta name="keywords" content="ثانوية رمضاني محمد, قرومة, البويرة, تعليم, الجزائر, فؤاد قبلاجي">
-
     <title>ثانوية الشهيد رمضاني محمد - قرومة</title>  
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;500;700;800&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">  <script src="https://www.google.com/recaptcha/api.js" async defer></script>  
@@ -232,7 +229,7 @@
         </div>  
 
         <div class="captcha-container">  
-            <div class="g-recaptcha" data-sitekey="6LcOhWksAAAAACbI9AFoq5V8_8YAa3KdLBvNUS4u"><div>  
+            <div class="g-recaptcha" data-sitekey="6LcOhWksAAAAACbI9AFoq5V8_8YAa3KdLBvNUS4u"></div>  
         </div>  
 
         <button class="btn-add" id="uploadBtn" onclick="publish()" disabled>نشر الإعلان الآن</button>  
@@ -270,7 +267,7 @@
 <div id="dev" class="section">  
     <div class="card dev-card">  
         <div class="dev-img-container">  
-            <img src="cv/1770455808503.png" alt="فؤاد قبلاجي" class="dev-img">  
+            <img src="1770455808503.png" alt="فؤاد قبلاجي" class="dev-img">  
         </div>  
         <div class="dev-name">𝐹𝑜𝑢𝑎𝑑 𝑘𝑒𝑏𝑙𝑎𝑑𝑗𝑖 | فےـؤاد قبلاجي</div>  
         <p class="dev-bio">‏
@@ -667,4 +664,4 @@ html,body{overflow-x:hidden}
  .container{max-width:1100px}
  .card{padding:35px}
 }
-            </style>
+        </style>
