--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>  <html lang="ar" dir="rtl">  
 <head>  
     <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
+    <meta name="description" content="ثانوية الشهيد رمضاني محمد بفرومة - صرح تعليمي متميز يقدم محتوى تربوي وتعليمي للطلبة"> 
+        <meta name="keywords" content="،مدرسة رمضاني, ثانوية رمضاني محمد, فرومة, تعليم, الجزائر, Ramdani School، ڨرومة،، أخبار قرومة، ثانوية ڨرومة،> 
     <title>ثانوية الشهيد رمضاني محمد - قرومة</title>  
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;500;700;800&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">  <script src="https://www.google.com/recaptcha/api.js" async defer></script>  
